--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "gray-matter": "^4.0.3",
     "next": "13.0.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
