--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
